added personal website

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script src="app.js" charset="utf-8"></script>
 
     <footer class="footer">
-      <p>Developed by <a style="text-decoration: none;" href="https://www.google.com"/>Avinash</a>.</p>
+      <p>Developed by <a style="text-decoration: none;" href="https://github.com/disturbedlord"/>Avinash</a>.</p>
     </footer>
   </body>
 </html>
